--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,10 @@
 {
+    "name": "mksec/silmod",
     "require": {
         "silex/silex": "~2.0",
         "twig/twig": "~1.0"
+    },
+    "autoload": {
+        "psr-4": { "SilMod\\": "src" }
     }
 }
